infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: daorsagro
  labels:
    name: daorsagro
    environment: production
